// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar  default avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            ownerState={
              Object {
                "children": <User
                  className="HvAvatar-fallback"
                  color="atmo1"
                  iconSize="XS"
                />,
                "className": "HvAvatar-root HvAvatar-avatar HvAvatar-SM",
                "colorDefault": true,
                "component": "div",
                "style": Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                },
                "variant": "circular",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM css-1mo7jmj-MuiAvatar-root"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              <User
                className="HvAvatar-fallback"
                color="atmo1"
                iconSize="XS"
              >
                <HvIconBase
                  className="HvAvatar-fallback"
                  iconSize="XS"
                  name="User"
                >
                  <div
                    className="HvAvatar-fallback HvIconBase-root HvIconBase-xs"
                    name="User"
                  >
                    <svg
                      focusable={false}
                      height={12}
                      viewBox="0 0 16 16"
                      width={12}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M9.6 8.7A4.49656 4.49656 0 008.03809 0Q8.019-.00007 8 0a4.481 4.481 0 00-4.5 4.46194q-.00009.019 0 .03808A4.563 4.563 0 006.4 8.7 7.687 7.687 0 00.5 16h1a6.487 6.487 0 016.474-6.5H8a6.487 6.487 0 016.5 6.474V16h1a7.493 7.493 0 00-5.9-7.3zM4.5 4.5A3.543 3.543 0 018 1a3.543 3.543 0 013.5 3.5A3.543 3.543 0 018 8a3.543 3.543 0 01-3.5-3.5z"
                        fill="#FBFCFC"
                      />
                    </svg>
                  </div>
                </HvIconBase>
              </User>
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  icon avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            ownerState={
              Object {
                "children": <LogIn
                  iconSize="XS"
                />,
                "className": "HvAvatar-root HvAvatar-avatar HvAvatar-SM",
                "colorDefault": true,
                "component": "div",
                "style": Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                },
                "variant": "circular",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM css-1mo7jmj-MuiAvatar-root"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              <LogIn
                iconSize="XS"
              >
                <HvIconBase
                  iconSize="XS"
                  name="LogIn"
                >
                  <div
                    className="HvIconBase-root HvIconBase-xs"
                    name="LogIn"
                  >
                    <svg
                      focusable={false}
                      height={12}
                      viewBox="0 0 16 16"
                      width={12}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        className="color0"
                        d="M16 16H6v-1h9V1H6V0h10zm-7.69995-4.5L9 12.2 13.2 8 9 3.8l-.69995.7 3 3H1v1h10.30005z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </HvIconBase>
              </LogIn>
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  image avatar snapshot 1`] = `
<WithStyles(HvAvatar)
  imgProps={
    Object {
      "onError": [Function],
      "other": "my value",
    }
  }
  src="something.jpg"
>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
    imgProps={
      Object {
        "onError": [Function],
        "other": "my value",
      }
    }
    src="something.jpg"
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={Object {}}
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            ownerState={
              Object {
                "children": <img
                  className="HvAvatar-img"
                  onError={[Function]}
                  other="my value"
                  src="something.jpg"
                />,
                "className": "HvAvatar-root HvAvatar-avatar HvAvatar-SM",
                "colorDefault": true,
                "component": "div",
                "style": Object {},
                "variant": "circular",
              }
            }
            style={Object {}}
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM css-1mo7jmj-MuiAvatar-root"
              style={Object {}}
            >
              <img
                className="HvAvatar-img"
                onError={[Function]}
                other="my value"
                src="something.jpg"
              />
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;

exports[`Avatar  letter avatar snapshot 1`] = `
<WithStyles(HvAvatar)>
  <HvAvatar
    classes={
      Object {
        "LG": "HvAvatar-LG",
        "MD": "HvAvatar-MD",
        "SM": "HvAvatar-SM",
        "XL": "HvAvatar-XL",
        "XS": "HvAvatar-XS",
        "avatar": "HvAvatar-avatar",
        "badge": "HvAvatar-badge",
        "circular": "HvAvatar-circular",
        "container": "HvAvatar-container",
        "fallback": "HvAvatar-fallback",
        "img": "HvAvatar-img",
        "root": "HvAvatar-root",
        "status": "HvAvatar-status",
      }
    }
  >
    <div
      className="HvAvatar-container"
    >
      <div
        className="HvAvatar-status HvAvatar-circular HvAvatar-SM"
        style={Object {}}
      >
        <ForwardRef(Avatar)
          className="HvAvatar-root HvAvatar-avatar HvAvatar-SM"
          style={
            Object {
              "backgroundColor": "#414141",
              "color": "#FBFCFC",
            }
          }
          variant="circular"
        >
          <MuiAvatarRoot
            as="div"
            className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM"
            ownerState={
              Object {
                "children": "OT",
                "className": "HvAvatar-root HvAvatar-avatar HvAvatar-SM",
                "colorDefault": true,
                "component": "div",
                "style": Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                },
                "variant": "circular",
              }
            }
            style={
              Object {
                "backgroundColor": "#414141",
                "color": "#FBFCFC",
              }
            }
          >
            <Insertion
              cache={
                Object {
                  "insert": [Function],
                  "inserted": Object {
                    "1mo7jmj-MuiAvatar-root": true,
                  },
                  "key": "css",
                  "nonce": undefined,
                  "registered": Object {},
                  "sheet": StyleSheet {
                    "_alreadyInsertedOrderInsensitiveRule": true,
                    "_insertTag": [Function],
                    "before": null,
                    "container": <head>
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvIconBase"
                      >
                        
.HvIconBase-root {
  display: flex;
}
.HvIconBase-root svg {
  margin: auto;
}
.HvIconBase-xs {
  width: 32px;
  height: 32px;
}
.HvIconBase-s {
  width: 32px;
  height: 32px;
}
.HvIconBase-m {
  width: 48px;
  height: 48px;
}
.HvIconBase-l {
  width: 112px;
  height: 112px;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                      <style
                        data-jss=""
                        data-meta="HvAvatar"
                      >
                        
.HvAvatar-root {
  font-size: 1rem;
}
.HvAvatar-img {
  color: transparent;
  width: 100%;
  height: 100%;
  object-fit: cover;
  text-align: center;
  text-indent: 10000px;
}
.HvAvatar-container:focus-visible {
  box-shadow: 0 0 0 1px #52A8EC, 0 0 0 4px rgba(29,155,209,.3);
  border-radius: 0;
  outline-color: #52A8EC;
  outline-style: solid;
  outline-width: 0px;
  outline-offset: -1px;
}
.HvAvatar-status {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
}
.HvAvatar-status.HvAvatar-XS {
  width: 32px;
  height: 32px;
}
.HvAvatar-status.HvAvatar-SM {
  width: 40px;
  height: 40px;
}
.HvAvatar-status.HvAvatar-MD {
  width: 48px;
  height: 48px;
}
.HvAvatar-status.HvAvatar-LG {
  width: 60px;
  height: 60px;
}
.HvAvatar-status.HvAvatar-XL {
  width: 96px;
  height: 96px;
}
.HvAvatar-avatar.HvAvatar-XS {
  width: 24px;
  height: 24px;
  font-size: 0.5rem;
}
.HvAvatar-avatar.HvAvatar-SM {
  width: 32px;
  height: 32px;
  font-size: 0.625rem;
}
.HvAvatar-avatar.HvAvatar-MD {
  width: 40px;
  height: 40px;
  font-size: 1rem;
}
.HvAvatar-avatar.HvAvatar-LG {
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
}
.HvAvatar-avatar.HvAvatar-XL {
  width: 88px;
  height: 88px;
  font-size: 2rem;
}
.HvAvatar-badge {
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  z-index: 1;
  position: absolute;
  border-radius: 50%;
}
.HvAvatar-circular {
  border-radius: 50%;
}

                      </style>
                    </head>,
                    "ctr": 1,
                    "insertionPoint": undefined,
                    "isSpeedy": false,
                    "key": "css",
                    "nonce": undefined,
                    "prepend": true,
                    "tags": Array [
                      <style
                        data-emotion="css"
                        data-s=""
                      >
                        
                        .css-1mo7jmj-MuiAvatar-root{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;color:#E8E8E8;background-color:#bdbdbd;}
                      </style>,
                    ],
                  },
                }
              }
              isStringTag={true}
              serialized={
                Object {
                  "map": undefined,
                  "name": "1mo7jmj-MuiAvatar-root",
                  "next": undefined,
                  "styles": "label:MuiAvatar-root;position:relative;display:flex;align-items:center;justify-content:center;flex-shrink:0;width:40px;height:40px;font-family:'Open Sans',Arial,Helvetica,sans-serif;font-size:1.25rem;line-height:1;border-radius:50%;overflow:hidden;user-select:none;color:#E8E8E8;background-color:#bdbdbd;",
                  "toString": [Function],
                }
              }
            />
            <div
              className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault HvAvatar-root HvAvatar-avatar HvAvatar-SM css-1mo7jmj-MuiAvatar-root"
              style={
                Object {
                  "backgroundColor": "#414141",
                  "color": "#FBFCFC",
                }
              }
            >
              OT
            </div>
          </MuiAvatarRoot>
        </ForwardRef(Avatar)>
      </div>
    </div>
  </HvAvatar>
</WithStyles(HvAvatar)>
`;
